cambio en imagenes

--- a/public/views/login/main.html
+++ b/public/views/login/main.html
@@ -13,7 +13,7 @@
 				<div class="loginMarco" style="padding-bottom: 20px;">
 
 					<div class="" style="" >
-						<img class="visible imagenLogoLogin" src="../public/img/logoAmateColor.png" >
+						<img class="visible imagenLogoLogin" src="img/logoAmateColor.png" >
 					</div>
 					<div class="formularioRegistro" style="    margin-left: 12.5% !important;
 					width: 75% !important;">
