--- a/public/views/preguntas/seleccion.html
+++ b/public/views/preguntas/seleccion.html
@@ -27,7 +27,7 @@
 
 							<div md-ink-ripple="#fb8eb0" style="height: 100%; position: relative;">
 								<div style="height: calc(100% - 51px);background-color: #ed6790;">
-									<img class="visible imagenPregunta" src="../public/img/seno.png" >
+									<img class="visible imagenPregunta" src="img/seno.png" >
 								</div>
 
 								<div class="" style="    background: #db2763; border: 1px solid #db2763; box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2), 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12);border-top: 1px solid #db2763;padding: 20px;">
@@ -48,7 +48,7 @@
 								<div style="height: calc(100% - 51px);    background: #009997;">
 
 
-									<img class="visible imagenPregunta" src="../public/img/cuello.png" >
+									<img class="visible imagenPregunta" src="img/cuello.png" >
 
 								</div>
 
