--- a/public/views/web/main.html
+++ b/public/views/web/main.html
@@ -31,7 +31,7 @@
 
 						<!-- 		<h2 class=""  style="    font-size: 22px;">GRACIAS POR USAR NUESTRO APLICATIVO PARA EL APRENDIZAJE SOBRE LA <b>PREVENCIÓN DEL CANCER DE SENO Y CUELLO UTERINO</b></h2>
  -->
-								<img class="visible imagenLogoWeb" src="../public/img/logoAmateColor.png" >
+								<img class="visible imagenLogoWeb" src="img/logoAmateColor.png" >
 							</div>
 
 							</div>
@@ -40,7 +40,7 @@
 						</div>
 						
 						<div style="width:50%;height: calc(100%);background-color: #ed6790;float: right;" class="izquierdaColumna">
-							<img class="visible imagenPregunta" src="../public/img/bienvenida.png" >
+							<img class="visible imagenPregunta" src="img/bienvenida.png" >
 						</div>
 
 					</div>
