cambio en http a https

--- a/public/views/puntos/asignacion.html
+++ b/public/views/puntos/asignacion.html
@@ -12,7 +12,7 @@
 			<div class="seccionCuerpo visible" style="height: 100%;">
 
 
-				<md-content md-theme="formulario" style=" display:grid; background-color: white; overflow-x: hidden; height: 100%;background-image: url(../public/img/puntaje-amate.jpg);background-size: 100% 100%; padding: 10px;">
+				<md-content md-theme="formulario" style=" display:grid; background-color: white; overflow-x: hidden; height: 100%;background-image: url(img/puntaje-amate.jpg);background-size: 100% 100%; padding: 10px;">
 
 
 
@@ -67,7 +67,7 @@
 						<a href="amate@pfccap.com">amate@pfccap.com</a>
 
 						<div style="widows: 100%;">
-							<img class="visible imagenLogoWeb" src="../public/img/logoAmateColor.png" style="width: 300px;">
+							<img class="visible imagenLogoWeb" src="img/logoAmateColor.png" style="width: 300px;">
 						</div>
 
 					
