--- a/public/views/puntos/puntos.html
+++ b/public/views/puntos/puntos.html
@@ -12,12 +12,12 @@
 			<div class="seccionCuerpo visible" style="height: 100%;">
 
 
-				<md-content md-theme="formulario" style=" background-color: white; overflow-x: hidden; height: 100%;background-image: url(../public/img/puntaje-amate.jpg);background-size: 100% 100%;">
+				<md-content md-theme="formulario" style=" background-color: white; overflow-x: hidden; height: 100%;background-image: url(img/puntaje-amate.jpg);background-size: 100% 100%;">
 
 					<div class="cuerpoAplicacion visible" style="display:inline; width:100% !important	;height: 100%;  margin-left:0px !important;">
 						
 						<div style="height: calc(100%);width: 100%;float: right;position: absolute;" class="imgBackground">
-							<!-- <img class="visible imagenPregunta" src="../public/img/puntaje-amate.jpg" > -->
+							
 						</div>
 						
 						<div class="tablaPuntos"  style=" width: 50%;height: 100%;  float: right;display: table;position: absolute;margin-left: 50%; ">
