--- a/public/views/login/main.html
+++ b/public/views/login/main.html
@@ -31,7 +31,7 @@
 				<div ng-messages="formulario.razon.$error">
 					<div ng-message="required">Este campo es requerido.</div>
 				</div>
-				<a ng-click="goRecuperar()" style="position: absolute;width: 100%; margin-top:20px; text-align: center;text-decoration: none;" href="../public/#/recuperar">¿Olvidaste tu contraseña?</a>
+				<a ng-click="goRecuperar()" style="position: absolute;width: 100%; margin-top:20px; text-align: center;text-decoration: none; cursor:pointer;" >¿Olvidaste tu contraseña?</a>
 			</md-input-container>			
 
 
