--- a/public/views/login/recuperar.html
+++ b/public/views/login/recuperar.html
@@ -44,7 +44,7 @@
 						<div style="">
 
 							<md-button ng-click="recuperarContrasena()" class="md-raised primaryAmate " ng-disabled=""   style="    text-transform: initial;    margin-bottom: 20px; width: 80%; margin-left:10%;   " >Enviar email</md-button>
-							<a ng-click="goSeccion('login')" href="../public/#/login"   style="margin-top:20px; text-align: center;text-decoration: none;margin-left: 100px;">Volver al login</a>
+							<a ng-click="goSeccion('login')"   style="margin-top:20px; text-align: center;text-decoration: none;margin-left: 100px;cursor: pointer;">Volver al login</a>
 						</div>
 					</div>
 
