--- a/public/views/registro/registrarse.html
+++ b/public/views/registro/registrarse.html
@@ -59,7 +59,7 @@
 				<div style="">
 
 					<md-button ng-click="registrarse()" class="md-raised md-primary primaryAmate"   style="    text-transform: initial;    margin-bottom: 20px; width: 80%; margin-left:10%;   " >Registrarme</md-button>
-					<a ng-click="goSeccion('login')" href="../public/#/login"  style="margin-top:20px; text-align: center;text-decoration: none;    margin-left: calc(50% - 45px);">Volver al login</a>
+					<a ng-click="goSeccion('login')"   style="margin-top:20px; text-align: center;text-decoration: none;    margin-left: calc(50% - 45px); cursor:pointer;">Volver al login</a>
 				</div>
 			</div>
 
