--- a/public/views/edicion/main.html
+++ b/public/views/edicion/main.html
@@ -81,17 +81,27 @@
 
 
               <md-input-container  class="col-md-6  col-xl-6 col-lg-6 col-sm-12" md-rowspan="3">
-                <label>Teléfono</label>
-                <input type="text" required name="telefono" md-maxlength="10" ng-model="formulario.envio.telefono" ng-change='validar();validarTelefono()'>
+                <label>Teléfono fijo</label>
+                <input type="text" required name="telefono" md-maxlength="7" ng-pattern="/^[0-9]*$/" ng-model="formulario.envio.telefono" ng-change='validar();validarTelefono()'>
                 <div ng-messages="formularioForm.telefono.$error">
                   <div ng-message="required">Este campo es requerido.</div>
-                  <div ng-message="md-maxlength">Máximo 15 caracteres</div>
+                  <div ng-message="md-maxlength">Máximo 7 caracteres</div>
                   <div ng-message="required">Este campo es requerido.</div>
-                   <div ng-message="validationError">Minimo 6 digitos.</div>
+                   <div ng-message="validationError">Minimo 7 digitos.</div>
                 </div>
               </md-input-container>
 
 
+              <md-input-container  class="col-md-6  col-xl-6 col-lg-6 col-sm-12" md-rowspan="3">
+                <label>Celular</label>
+                <input type="text" required name="celular" md-maxlength="10" ng-pattern="/^[0-9]*$/" ng-model="formulario.envio.celular" ng-change='validar();validarCelular()'>
+                <div ng-messages="formularioForm.celular.$error">
+                  <div ng-message="required">Este campo es requerido.</div>
+                  <div ng-message="md-maxlength">Máximo 10 caracteres</div>
+                  <div ng-message="required">Este campo es requerido.</div>
+                   <div ng-message="validationError">Minimo 10 digitos.</div>
+                </div>
+              </md-input-container>
 
               <md-input-container  class="col-md-6 col-xl-6 col-lg-6 col-sm-12" md-rowspan="3">
                 <label>Dirección</label>
